--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.6.0",
     "mongoose": "^5.9.21",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4"
   }
 }
