--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# uploads/images folder
+# REMEMBER: To re-create it with same structure
+# and add a dummy.txt file before deploy to heroku
+/uploads/images
+
 # dependencies
 /node_modules
 /.pnp
